# fdk-aac

./: .gitignore  Android.bp  Android.mk  CMakeLists.txt  ChangeLog  METADATA  Makefile.am  Makefile.vc  OWNERS  TEST_MAPPING  aac-dec.c  aac-enc.c  autogen.sh  bootstrap  configure.ac  fdk-aac.pc.in  fuzz-dec.c  m4a-dec.c  meson.build  meson_options.txt  readme.md  test-encode-decode.c  wavreader.c
.github/workflows/: ci.yml
contrib/: lib_crc.c  lib_crc.h
fdk-aac/: meson.build
fuzzer/: Android.bp  README.md  aac_dec_fuzzer.cpp  aac_enc_fuzzer.cpp
libAACdec/include/: aacdecoder_lib.h
libAACdec/src/: Android.mk  aac_ram.cpp  aac_ram.h  aac_rom.cpp  aac_rom.h  aacdec_drc.cpp  aacdec_drc.h  aacdec_drc_types.h  aacdec_hcr.cpp  aacdec_hcr.h  aacdec_hcr_bit.cpp  aacdec_hcr_bit.h  aacdec_hcr_types.h  aacdec_hcrs.cpp  aacdec_hcrs.h  aacdec_pns.cpp  aacdec_pns.h  aacdec_tns.cpp  aacdec_tns.h  aacdecoder.cpp  aacdecoder.h  aacdecoder_lib.cpp  block.cpp  block.h  channel.cpp  channel.h  channelinfo.cpp  channelinfo.h  conceal.cpp  conceal.h  conceal_types.h  debug.h  ldfiltbank.cpp  ldfiltbank.h  overlapadd.h  pulsedata.cpp  pulsedata.h  rvlc.cpp  rvlc.h  rvlc_info.h  (+15 more)
libAACdec/src/arm/: block_arm.cpp
libAACenc/include/: aacenc_lib.h
libAACenc/src/: Android.mk  aacEnc_ram.cpp  aacEnc_ram.h  aacEnc_rom.cpp  aacEnc_rom.h  aacenc.cpp  aacenc.h  aacenc_hcr.cpp  aacenc_hcr.h  aacenc_lib.cpp  aacenc_pns.cpp  aacenc_pns.h  aacenc_tns.cpp  aacenc_tns.h  adj_thr.cpp  adj_thr.h  adj_thr_data.h  band_nrg.cpp  band_nrg.h  bandwidth.cpp  bandwidth.h  bit_cnt.cpp  bit_cnt.h  bitenc.cpp  bitenc.h  block_switch.cpp  block_switch.h  channel_map.cpp  channel_map.h  chaosmeasure.cpp  chaosmeasure.h  dyn_bits.cpp  dyn_bits.h  grp_data.cpp  grp_data.h  intensity.cpp  intensity.h  interface.h  line_pe.cpp  line_pe.h  (+35 more)
libArithCoding/src/: ac_arith_coder.cpp
libDRCdec/include/: FDK_drcDecLib.h
libDRCdec/src/: FDK_drcDecLib.cpp  drcDec_gainDecoder.cpp  drcDec_reader.cpp  drcDec_selectionProcess.cpp  drcDec_selectionProcess.h  drcDec_types.h  drcGainDec_init.cpp  drcGainDec_preprocess.cpp  drcGainDec_process.cpp
libFDK/include/: FDK_archdef.h  FDK_bitbuffer.h  FDK_bitstream.h  FDK_core.h  FDK_crc.h  FDK_hybrid.h  FDK_qmf_domain.h  FDK_tools_rom.h  FDK_trigFcts.h  abs.h  autocorr2nd.h  clz.h  common_fix.h  cplx_mul.h  dct.h  fft.h  fft_rad2.h  fixmadd.h  fixminmax.h  fixmul.h  fixpoint_math.h  mdct.h  qmf.h  scale.h  scramble.h
libFDK/include/aarch64/: clz_aarch64.h  cplx_mul.h  fixmadd_aarch64.h  fixmul_aarch64.h  scale.h  scramble.h
libFDK/include/arm/: clz_arm.h  cplx_mul.h  fixmadd_arm.h  fixmul_arm.h  scale.h  scramble.h
libFDK/include/mips/: abs_mips.h  clz_mips.h  cplx_mul.h  cplx_mul_mips.h  fixmadd_mips.h  fixmul_mips.h  scale.h  scramble.h
libFDK/include/x86/: abs_x86.h  clz_x86.h  fixmul_x86.h
libFDK/src/: Android.mk  FDK_bitbuffer.cpp  FDK_core.cpp  FDK_crc.cpp  FDK_decorrelate.cpp  FDK_hybrid.cpp  FDK_lpc.cpp  FDK_qmf_domain.cpp  FDK_tools_rom.cpp  FDK_trigFcts.cpp  autocorr2nd.cpp  dct.cpp  fft.cpp  fft_rad2.cpp  fixpoint_math.cpp  mdct.cpp  nlc_dec.cpp  qmf.cpp  scale.cpp
libFDK/src/arm/: autocorr2nd.cpp  dct_arm.cpp  fft_rad2_arm.cpp  qmf_arm.cpp  scale_arm.cpp
libFDK/src/mips/: fft_rad2_mips.cpp  mips_fft_twiddles.cpp  scale.cpp
libMpegTPDec/include/: mpegFileRead.h  tp_data.h  tpdec_lib.h
libMpegTPDec/src/: Android.mk  mpegFileFormat.h  tpdec_adif.cpp  tpdec_adif.h  tpdec_adts.cpp  tpdec_adts.h  tpdec_asc.cpp  tpdec_latm.cpp  tpdec_latm.h  tpdec_lib.cpp  version
libMpegTPEnc/include/: mpegFileWrite.h  tp_data.h  tpenc_lib.h
libMpegTPEnc/src/: Android.mk  tpenc_adif.cpp  tpenc_adif.h  tpenc_adts.cpp  tpenc_adts.h  tpenc_asc.cpp  tpenc_asc.h  tpenc_dab.cpp  tpenc_dab.h  tpenc_latm.cpp  tpenc_latm.h  tpenc_lib.cpp  version
libPCMutils/include/: pcmutils_lib.h
libPCMutils/src/: Android.mk  limiter.cpp  pcmdmx_lib.cpp  pcmutils_lib.cpp  version.h
libSACdec/include/: sac_dec_lib.h
libSACdec/src/: sac_bitdec.cpp  sac_dec.cpp  sac_dec_lib.cpp  sac_process.cpp  sac_reshapeBBEnv.cpp  sac_rom.h  sac_stp.cpp
libSACenc/src/: sacenc_nlc_enc.cpp
libSBRdec/include/: sbrdecoder.h
libSBRdec/src/: Android.mk  HFgen_preFlat.cpp  env_calc.cpp  env_calc.h  env_dec.cpp  env_dec.h  env_extr.cpp  env_extr.h  hbe.cpp  huff_dec.cpp  huff_dec.h  lpp_tran.cpp  lpp_tran.h  psbitdec.cpp  psbitdec.h  psdec.cpp  psdec.h  psdec_hybrid.cpp  psdec_hybrid.h  sbr_crc.cpp  sbr_crc.h  sbr_deb.cpp  sbr_deb.h  sbr_dec.cpp  sbr_dec.h  sbr_ram.cpp  sbr_ram.h  sbr_rom.cpp  sbr_rom.h  sbr_scale.h  sbrdec_drc.cpp  sbrdec_drc.h  sbrdec_freq_sca.cpp  sbrdec_freq_sca.h  sbrdecoder.cpp  transcendent.h
libSBRdec/src/arm/: env_calc_arm.cpp  lpp_tran_arm.cpp
libSBRenc/include/: sbr_encoder.h
libSBRenc/src/: Android.mk  bit_sbr.cpp  bit_sbr.h  cmondata.h  code_env.cpp  code_env.h  env_bit.cpp  env_bit.h  env_est.cpp  env_est.h  fram_gen.cpp  fram_gen.h  invf_est.cpp  invf_est.h  mh_det.cpp  mh_det.h  nf_est.cpp  nf_est.h  ps_bitenc.cpp  ps_bitenc.h  ps_const.h  ps_encode.cpp  ps_encode.h  ps_main.cpp  ps_main.h  psenc_hybrid.cpp  psenc_hybrid.h  resampler.cpp  resampler.h  sbr.h  sbr_def.h  sbr_encoder.cpp  sbr_misc.cpp  sbr_misc.h  sbr_ram.cpp  sbr_ram.h  sbr_rom.cpp  sbr_rom.h  sbr_rom_enc.cpp  sbrenc_freq_sca.cpp  (+5 more)
libSYS/include/: FDK_audio.h  audio.h  cmdl_parser.h  conv_string.h  genericStds.h  machine_type.h  syslib_channelMapDescr.h  wav_file.h
libSYS/src/: Android.mk  cmdl_parser.cpp  conv_string.cpp  genericStds.cpp  syslib_channelMapDescr.cpp  wav_file.cpp
libSYS/src/linux/: FDK_stackload_linux.cpp  audio_linux.cpp  coresup_linux.cpp  (+2 more)
test/: ref-mono.txt  ref-stereo.txt
tests/AacDecBenchmark/: AacDecBenchmark.cpp  Android.bp  AndroidTest.xml  DynamicConfig.xml  README.md
tests/AacEncBenchmark/: AacEncBenchmark.cpp  Android.bp  AndroidTest.xml  DynamicConfig.xml  README.md
vs/: build.bat  build.ps1  fdk-aac.nuspec  fdk-aac.sln
vs/libAACdec/: libAACdec.vcxproj  libAACdec.vcxproj.filters
vs/libAACenc/: libAACenc.vcxproj  libAACenc.vcxproj.filters
win32/: getopt.h
(+1 files in other folders)
